// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a variable expression toJSON with a namespace 1`] = `
{
  "inputs": [
    {
      "css": "@#{bar.$foo}",
      "hasBOM": false,
      "id": "<input css _____>",
    },
  ],
  "namespace": "bar",
  "raws": {},
  "sassType": "variable",
  "source": <1:4-1:12 in 0>,
  "variableName": "foo",
}
`;

exports[`a variable expression toJSON without a namespace 1`] = `
{
  "inputs": [
    {
      "css": "@#{$foo}",
      "hasBOM": false,
      "id": "<input css _____>",
    },
  ],
  "raws": {},
  "sassType": "variable",
  "source": <1:4-1:8 in 0>,
  "variableName": "foo",
}
`;
